# PointNet_Reasoning_By_Cuda

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  running_time.txt  test.cu
include/: kernels.cuh  matrix.cuh  models.cuh  utils.cuh
src/: kernels.cu  main.cu  matrix.cu  models.cu
training/: program1.py
